Fix generate and destroy methods
Add web-ext config file
Add test page styling
Strip out uneeded code from highlight file

--- a/src/test-page.html
+++ b/src/test-page.html
@@ -3,14 +3,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Check it!</title>
+  <link rel="stylesheet" href="test-page.css" />
+    <title>Spell Check It!</title>
 </head>
 
 <body>
-<textarea id="story" name="story" rows="10" cols="50">
-It was a dark and stormy night...
-I am not pslld gud but I don't trigger yall.
-Haben sie zeit für brot?
-</textarea>
+  <div class="outer">
+    <div class="middle">
+      <h1>Hello Parallel Worlds</h1>
+      <textarea id="story" name="story" rows="20" cols="30">It was a dark and stormy night... Haben sie zeit für brot?</textarea>
+    </div>
+  </div>
 </body>
 </html>
