Adds persistent custom dictionary storage feature
Adds keyboard shortcut for triggering add/remove custom word command
Adds context menu items for triggering add/remove custom word command
Fixes bound listeners not being properly destroyed
Adds addon id

Add User class and significant code refactor

Remove dompurify dep (still unused)

Remove and ignore dist contents (don't need this in version control)

--- a/src/test-page.html
+++ b/src/test-page.html
@@ -11,7 +11,8 @@
   <div class="outer">
     <div class="middle">
       <h1>Hello Parallel Worlds</h1>
-      <textarea id="story" name="story" rows="20" cols="30">It was a dark and stormy night... Haben sie zeit für brot?</textarea>
+      <textarea id="one" rows="20" cols="30">It was a dark and stormy night... Haben sie zeit für brot?</textarea>
+      <textarea id="two" rows="20" cols="30">It was a dark and stormy night... Haben sie zeit für brot?</textarea>
     </div>
   </div>
 </body>
