Fix spell checking not working after opening browser popup
Update multi dict demo

--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -11,11 +11,11 @@
     <h1> MultiDict</h1>
     <p> Spell checking made easy<p>
     <p>
-      <textarea id="one" rows="20" cols="30">broth It was a dark and stormy night... Haben sie zeit für brot?
+      <textarea id="one" rows="20" cols="30">It was a dark and stormy night...
 
 kablam shizzle brot?</textarea>
     </p>
-    <p> Known Bugs<br>
+    <!-- <p> Known Bugs<br>
       - removing border from textarea misaligns backdrop/highlights
     </p>
     <p>
@@ -40,8 +40,9 @@ kablam shizzle brot?</textarea>
     <p>
       <button class="previous-button">Previous</button>
       <button class="next-button">Next</button>
-    </p>
-    <!-- <textarea id="two" rows="20" cols="30">It was a dark and stormy night... Haben sie zeit für brot?</textarea> -->
-    <script src="test-page.js"></script>
+    </p> -->
+    <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
+    <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd? </textarea>
+    <!-- <script src="test-page.js"></script> -->
 </body>
 </html>
