--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -12,7 +12,7 @@
     <p> Spell checking made easy</p>
     <div><textarea id="one" rows="20" cols="30">It was a dark and stormy night... kablam shizzle brot?</textarea></div>
     <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
-    <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd? </textarea>
+    <div id="three" contenteditable="true">Let's shizzle, kablam fuckers!</div>
     <p> Known Bugs<br>
       - removing border from textarea misaligns backdrop/highlights
     </p>
