Got recursive div walk partly working (WIP)

--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -13,7 +13,7 @@
     <div><textarea id="one" rows="20" cols="30">It was a dark and stormy night... kablam shizzle brot?</textarea></div>
     <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
     <div id="three" contenteditable="true">Let's shizzle, kablam fuckers!</div>
-    <div id="four" contenteditable="true">kablam<div>shizzle,</div> <div>kablam</div> fuckers!<div>kablam<div>kablam</div></div></div>
+    <div id="four" contenteditable="true"><div>kablam</div><div>kablam</div><div>kablam</div>kablam<div>kablam<div>kablam!</div></div></div>
     <p> Known Bugs<br>
       - removing border from textarea misaligns backdrop/highlights
     </p>
