Fix disable native spellcheck being reapplied to nodes already disabled
Fix container position clipping over content on StackOverflow (and elsewhere)

Detect language now only if node changes or language unreliable

Apply settings now takes nodeList parameter and is called by handleChanges too

Update test page and styles to more easily test highlights layout

Highlighter refactor/code tidy

Update content script to handle setting current word and marks

Refactor WordCarousel and Spelling classes
Delete uneeded highlight.css file and remove manifest entry

Refactor and split helpers across two files into text-methods

Finishin refactoring Carousel into own unique class

Udpate content script to work with new Carousel syntax
Refactor highlighter class properties to follow privacy syntax (_)

Update hihglight positioning logic

Move highlighter file
Update content script to blur textarea and hide current mark

Fix carousel not showing in correct place when text area has display:block

Fix highlighter render method using old text value

Refactor helpers and content script to be cleaner

Rename detect language function and do so on every textarea update

Removing a word from the popup now properly triggers a recheck

Remove old unused files and commented out code

--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -10,11 +10,34 @@
 <body>
     <h1> MultiDict</h1>
     <p> Spell checking made easy</p>
-    <div><textarea id="one" rows="20" cols="30">It was a dark and stormy night... kablam shizzle brot?</textarea></div>
+    <div class="container">
+      <textarea id="one" rows="20" cols="30">It was a dark and stormy night... kablam shizzle brot?</textarea>
+    </div>
     <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
     <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd? </textarea>
     <p> Known Bugs<br>
       - removing border from textarea misaligns backdrop/highlights
     </p>
+    <button class="display" type="button">Display</button>
+    <button class="position" type="button">Position</button>
 </body>
+<script>
+  const displayTypes = ['block', 'inline', 'inline-block', 'flex', 'inline-flex', 'none', 'inherit']
+  const positions = ['absolute', 'fixed', 'initial', 'relative', 'static', 'sticky']
+  let displayIndex = 0
+  let positionIndex = 0
+  document.querySelector('button.display').addEventListener('click', event => {
+    if (displayIndex >= displayTypes.length) displayIndex = 0
+    document.querySelector('.container').style.display = displayTypes[displayIndex]
+    event.target.textContent = `Display: ${displayTypes[displayIndex]}`
+    displayIndex++
+  })
+
+  document.querySelector('button.position').addEventListener('click', event => {
+    if (positionIndex >= positions.length) positionIndex = 0
+    document.querySelector('#one').style.position = positions[positionIndex]
+    event.target.textContent = `Position: ${positions[positionIndex]}`
+    positionIndex++
+  })
+</script>
 </html>
