--- a/src/sidebar/sidebar.html
+++ b/src/sidebar/sidebar.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="popup.css"/>
+    <link rel="stylesheet" href="sidebar.css"/>
   </head>
 
 <body>
@@ -17,12 +17,13 @@
           <ul class="options">
           </ul>
         </li>
+        <li id="colorPicker"><a href="#"><label>Choose Highlight Colour<input type="color"></input></label></a></li>
         <li><a href="https://github.com/GrayedFox/multi-dict/tree/master#contact-details">Contact Details</a></li>
         <li><a href="https://github.com/GrayedFox/multi-dict">GitHub</a></li>
       </ul>
     </div>
   </nav>
-  <script src="popup.js"></script>
+  <script src="sidebar.js"></script>
 </body>
 
 </html>
