Add background and content script methods for handling max suggestions
Refactor background and content script function order

Add "buy me a coffee" Patreon link to sidebar

Rename project to multidict (from multi-dict)

Update user docs (readme)

Delete old multi-dict-demo
Add social card png (used for GitHub repo image)
Add suggestions slider HTML and CSS

Fix cursor not being a pointer when hovering over colour picker

Add background color styling to suggestions slider

Add message handler and connect suggestions slider with background api

--- a/src/sidebar/sidebar.html
+++ b/src/sidebar/sidebar.html
@@ -14,12 +14,15 @@
           <ul class="words"></ul>
         </li>
         <li id="settings"><a href="#">Options<div class="arrow">▶</div></a>
-          <ul class="options">
-          </ul>
+          <ul class="options"></ul>
         </li>
         <li id="colorPicker"><a href="#"><label>Choose Highlight Colour<input type="color"></input></label></a></li>
+        <li id="suggestions"><a href="#"><label>Limit Suggestions To: </a><output>4</output>
+          <input type="range" min="0" max="10" step="1"></input>
+        </label></li>
         <li><a href="https://github.com/GrayedFox/multi-dict/tree/master#contact-details">Contact Details</a></li>
         <li><a href="https://github.com/GrayedFox/multi-dict">GitHub</a></li>
+        <li><a href="https://www.patreon.com/grayedfox?fan_landing=true">Buy me a coffee!</a></li>
       </ul>
     </div>
   </nav>
