Fix broken readme links
Add missing credits link to ToC

Tidy up background script

Fix race condition and ensure listeners up when sidebar opens

Fix highlights layout being off after preveiwing a color

Fix preview/choosing colour breaking highlights layout

Fix blink mark conditional preventing blink mark from firing

Match suggestions hover opacity to highlight opacity

Fix isWholeWord not using word.text

Remove unused getSuggestions from Spelling class
Fix getMisspeltWordIndex not working

Words added/removed by shortcuts/context menu immediately appear in dict

Remove WordCarousel in favour of inlining all suggestions

Update readme to explain suggestions behaviour

--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="test-page.css" />
-    <title>Spell Check It!</title>
+    <title>Spellcheck it!</title>
 </head>
 
 <body>
-    <h1> MultiDict</h1>
-    <p> Spell checking made easy</p>
+    <h1> Multidict</h1>
+    <p> Because spellchecking should be smart, not difficult.</p>
     <div class="container">
-      <textarea id="one" rows="20" cols="30">It was a dark and stormy night... kablam shizzle brot?</textarea>
+      <textarea id="one" rows="20" cols="30">It was a dark and stormy night... you tread carefully after noticing the floor is thick with brot.</textarea>
+      <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
+      <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd?</textarea>
     </div>
-    <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
-    <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd? </textarea>
-    <p> Known Bugs<br>
-      - removing border from textarea misaligns backdrop/highlights
-    </p>
     <button class="display" type="button">Display</button>
     <button class="position" type="button">Position</button>
+    <!-- <p> Known Bugs<br>
+      - removing border from textarea misaligns backdrop/highlights
+    </p> -->
 </body>
 <script>
   const displayTypes = ['block', 'inline', 'inline-block', 'flex', 'inline-flex', 'none', 'inherit']
