Update package name Include sidebar in web-ext build Remove email package id
Fix word suggestion limit not working as described

Update readme
Update mozilla gecko UUID

Bump version numbers

Add developer readme

Add publish command to npm

Update package name

--- a/test_page/test-page.html
+++ b/test_page/test-page.html
@@ -12,8 +12,8 @@
     <p> Because spellchecking should be smart, not difficult.</p>
     <div class="container">
       <textarea id="one" rows="20" cols="30">It was a dark and stormy night... you tread carefully after noticing the floor is thick with brot.</textarea>
-      <textarea id="two" rows="20" cols="30">Guten Tag von MultiDict! Haben sie zeit für brot?</textarea>
-      <textarea id="three" rows="20" cols="30">Hola desde MultiDict! ¿Quieres un corrector ortográfico inteligentesd?</textarea>
+      <textarea id="two" rows="20" cols="30">Guten Tag von Multidict! Haben sie zeit für brot?</textarea>
+      <textarea id="three" rows="20" cols="30">Hola desde Multidict! ¿Quieres un corrector ortográfico inteligentesd?</textarea>
     </div>
     <button class="display" type="button">Display</button>
     <button class="position" type="button">Position</button>
