Ignore tasks folder for web-ext
Add developer-README to sourcecode.zip task

Use highlight colour for language border when moving languages

Add coffee icon
Replace contact details link with support pages

Add JSDOC comments to all helpers

Add underscore to private methods and remove them from exports
Rename blinkMark > blinkNode

Add JSDOC comments to all text methods

Remove unneeded getMisspeltWordIndex method
Add ¿ to _isWordBoundary rxSeperators

Sort dictionary alphabetically based on locale

Add buy me a coffee link

Add JSDOC comments to classes

Rename SuggestionTracker rotate > cycle

Remove unneeded JSON clone of ownwords

Move readmes about

Add github workflow

add gitkeep file

Update workflow to publish all docs

Update gitignore to ignore devdocs

remove faulty gh-pages config line

--- a/src/sidebar/sidebar.html
+++ b/src/sidebar/sidebar.html
@@ -23,10 +23,11 @@
         <li id="suggestions"><a href="#"><label>Limit Suggestions To: </a><output>4</output>
           <input type="range" min="0" max="10" step="1"></input>
         </label></li>
-        <li><a href="https://github.com/GrayedFox/multi-dict/tree/master#contact-details">Contact Details</a></li>
+        <li><a href="https://grayedfox.github.io/multidict/">Support</a></li>
         <li><a href="https://github.com/GrayedFox/multi-dict">GitHub</a></li>
-        <li><a href="https://github.com/GrayedFox/multidict/issues/new">Report a Bug</a></li>
-        <li><a href="https://www.patreon.com/grayedfox?fan_landing=true">Buy me a coffee!</a></li>
+        <li><a href="https://github.com/GrayedFox/multidict/issues/new">Report an Issue</a></li>
+        <li><a href="https://www.patreon.com/grayedfox?fan_landing=true">Patreon</a></li>
+        <li><a href="https://buymeacoff.ee/grayedfox">Buy me a coffee <div class="coffee">&#9749;</div></a></li>
       </ul>
     </div>
   </nav>
